--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
     <meta charset="UTF-8">
     <title>질문작성</title>
@@ -8,7 +11,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
 
 
-<div class="container">
+<div layout:fragment="content" class="container">
     <h5 class="my-3 border-bottom pb-2">질문등록</h5>
     <form th:action="@{/question/create} "th:object="${questionForm}" method="post">
         <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
